# rdk-xraudio

./: .gitignore  CONTRIBUTING.md  configure.ac
src/: Makefile.am  xraudio.c  xraudio.h  xraudio_atomic.c  xraudio_atomic.h  xraudio_common.h  xraudio_config_default.json  xraudio_dga.h  xraudio_eos.h  xraudio_hal.h  xraudio_input.c  xraudio_input.h  xraudio_kwd.h  xraudio_log.h  xraudio_main.c  xraudio_output.c  xraudio_output.h  xraudio_ovc.h  xraudio_platform.h  xraudio_ppr.h  xraudio_private.h  xraudio_resource.c  xraudio_sdf.h  xraudio_thread.c  xraudio_utils.c  xraudio_version.h
src/doxygen/: build_docs.py  xraudio_api_client
